# kglbase

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindKGLT.cmake
src/: game.cpp  game.h  main.cpp
